fix attempt for zoom on mobile

--- a/src/Styles/App.css
+++ b/src/Styles/App.css
@@ -23,6 +23,10 @@ body  {
   
 }
 
+input, textarea {
+  font-size: 16px;
+}
+
 
 
 
